...
                : Colors.neutral[400]
            }
            style={{ marginLeft: 12 }}
          />

          <TextInput
            testID="word-input"
            style={{
              flex: 1,
              paddingVertical: 12,
              paddingHorizontal: 8,
              fontSize: 16,
              color:
...
